--- a/user-client/src/components/Login/Login.css
+++ b/user-client/src/components/Login/Login.css
@@ -20,28 +20,29 @@
     background-color: #1a1a1a;
     border-radius: 1.25rem;
     padding: 1.875rem;
-    max-width: 18rem;
+    max-width: 22rem;
     width: 100%; 
     box-shadow: 0 0.625rem 1.875rem rgba(0, 0, 0, 0.5);
     margin: 0 auto; 
+    height: 20rem;
 }
 
 
 h2 {
     text-align: center;
-    margin-bottom: 1.25rem;
+    margin-bottom: 1.5rem;
     color: #FFD700;
     font-size: 1.5rem;
     
 }
 
 .input-group {
-    margin-bottom: 1.5rem; 
+    margin-bottom: 2rem; 
 }
 
 .input-group label {
     display: block;
-    font-size: 1.2rem; 
+    font-size: 1.5rem; 
     color: #FFD700;
     margin-bottom: 0.3125rem; 
 }
@@ -58,17 +59,6 @@ h2 {
     transition: all 0.3s ease;
 }
 
-.login-btn {
-    width: 100%;
-    padding: 0.625rem; 
-    background-color: #141414;
-    color: #fff;
-    font-size: 1rem; 
-    border: none;
-    border-radius: 0.3125rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
 
 input:focus {
   border-color: #FFEA00;
@@ -76,10 +66,11 @@ input:focus {
 
 .login-btn {
   width: 100%;
+  max-width: 8rem;
   padding: 0.625rem;
-  background-color: #101010;
+  background-color: #FFD700;
   border: none;
-  border-radius: 0.9rem solid #FFD700; 
+  border-radius: 0.4rem ; 
   color: #FFD700; 
   font-size: 1.2rem;
   cursor: pointer;
@@ -93,8 +84,8 @@ input:focus {
 }
 
 .login-btn:hover:not(:disabled) {
-  background-color: #ffce00;
-  color: #101010;
+  background-color: #101010;
+  color: #FFEA00;
 }
 
 .error {
@@ -161,9 +152,15 @@ input:focus {
         padding: 0.375rem; 
         font-size: 0.75rem;
         width: 15rem; 
-        background-color: #101010;
+        background-color: #FFD700;
+        color: #101010;
         margin: 0 auto; 
         display: block;
+    }
+
+    .login-btn:hover {
+        background-color: #101010;
+        color: #FFD700;
     }
 
 }
